# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
src/02-triangle/: main.cpp
src/03-shaders/: fragmentInVertex.frag  main.cpp  offset.vert  vertexOutColor.vert
src/04-textures/: fragmenttexture.frag  main.cpp  vertextexture.vert
src/05-transformations/: fragmenttransform.frag  main.cpp  vertextransform.vert
src/common/include/: shader.h
